--- a/index.html
+++ b/index.html
@@ -15,27 +15,21 @@
 
 
 
-    <h1>Legendary Food</h1>
-
+    <h1>Legendary Sushi Annának</h1>
     <ul>
-        <li>Vega bonus 1</li>
-    </ul>
 
+        <li>Vega bonus 1
         <ul>
-            <li>Tofu 1</li>
-            <li>Tofu 2</li>
-            <li>Tofu 3</li>
-
+            <li>Maki 1</li>
+            <li>Nigiri 2</li>
+            <li>Tekercsek 3</li>
         </ul>
-
-    <ul>
-
-        <li>Vega bonus 2</li>
-        <li>Vega bonus 3</li>
-
+        
+        <li>Cica bonus 2</li>
+        <li>Csimkin bonus 3</li>
     </ul>
 
-    <h1>Toppings</h1>
+    <h1>Toppings & Nomnomnoms</h1>
 
     <ol>
         <li>Choose</li>
